# archivum

./: .gitignore  Cargo.toml  README.md
backend/src/data_transfer_objects/: donation_event.rs  gift_sub_recipient.rs  mod.rs  raid.rs  stream.rs
backend/src/routes/: route_builder.rs
database_connection/src/: lib.rs
entities/src/: mod.rs  muted_vod_segment.rs  prelude.rs  stream.rs
entity_extensions/src/: stream.rs  twitch_user.rs
frontend/src/: App.tsx
frontend/src/components/: DonationsResults.tsx  MutedVodTableButton.tsx  QueryForm.tsx  RaidsResults.tsx  ResponsiveDataDisplay.tsx  StreamsResults.tsx
frontend/src/services/: FetchUrl.ts  FormatDate.ts
frontend/src/types/: CategoryState.ts  Donations.ts  Raid.ts  Streams.ts  users.ts
migration/src/: lib.rs  m20251109_005842_add_additional_stream_table_data.rs
nightly_checks/: Cargo.toml  Dockerfile
nightly_checks/kube/: cronjob-nightly_checks.yaml
nightly_checks/src/: lib.rs  main.rs
nightly_checks/src/checks/: mod.rs  update_changed_names.rs
nightly_checks/src/checks/update_vod_data/: config.rs  mod.rs
nightly_checks/src/checks/update_vod_data/config/: vod_stream_pair.rs
nightly_checks/src/checks/update_vod_data/twitch_objects/: mod.rs  vod_response.rs
report_generator/src/reports/: subathon_reports.rs
report_generator/template_files/: donation_stats  subathon_stats
spanix_scrubber/src/: main.rs  scrub_messages.rs
twitch_chat_tracker/: Cargo.toml
twitch_chat_tracker/kube/: deploy-twitch-chat-logger.yaml
twitch_chat_tracker/src/irc_chat/: message_parser.rs
(+20 files in other folders)
