[package]
name = "nightly_checks"
version = "0.1.0"
edition = "2024"

[dependencies]
app_config = { path = "../app_config" }
database_connection = { path = "../database_connection" }
entities = { path = "../entities" }
entity_extensions = { path = "../entity_extensions" }
tokio = { version = "1.45.0", features = ["full"] }
sea-orm = "1.1.11"
human-time = "0.1.6"
futures = { version = "0.3.31", features = [] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
url = "2.5"
reqwest = "0.12"
